--- a/cf/i18n/resources/en-us.all.json
+++ b/cf/i18n/resources/en-us.all.json
@@ -164,12 +164,24 @@
     "translation": "ADD/REMOVE PLUGIN"
   },
   {
+    "id": "ADD/REMOVE PLUGIN:",
+    "translation": "ADD/REMOVE PLUGIN:"
+  },
+  {
     "id": "ADD/REMOVE PLUGIN REPOSITORY",
     "translation": "ADD/REMOVE PLUGIN REPOSITORY"
   },
   {
+    "id": "ADD/REMOVE PLUGIN REPOSITORY:",
+    "translation": "ADD/REMOVE PLUGIN REPOSITORY:"
+  },
+  {
     "id": "ADVANCED",
     "translation": "ADVANCED"
+  },
+  {
+    "id": "ADVANCED:",
+    "translation": "ADVANCED:"
   },
   {
     "id": "ALIAS:",
@@ -202,6 +214,10 @@
   {
     "id": "APPS",
     "translation": "APPS"
+  },
+  {
+    "id": "APPS:",
+    "translation": "APPS:"
   },
   {
     "id": "APP_INSTANCES",
@@ -386,6 +402,10 @@
   {
     "id": "BUILDPACKS",
     "translation": "BUILDPACKS"
+  },
+  {
+    "id": "BUILDPACKS:",
+    "translation": "BUILDPACKS:"
   },
   {
     "id": "BUILDPACK_NAME",
@@ -1376,6 +1396,10 @@
     "translation": "DOMAINS"
   },
   {
+    "id": "DOMAINS:",
+    "translation": "DOMAINS:"
+  },
+  {
     "id": "Dashboard: {{.URL}}",
     "translation": "Dashboard: {{.URL}}"
   },
@@ -1642,6 +1666,10 @@
   {
     "id": "ENVIRONMENT VARIABLE GROUPS",
     "translation": "ENVIRONMENT VARIABLE GROUPS"
+  },
+  {
+    "id": "ENVIRONMENT VARIABLE GROUPS:",
+    "translation": "ENVIRONMENT VARIABLE GROUPS:"
   },
   {
     "id": "ENVIRONMENT VARIABLES:",
@@ -2020,6 +2048,10 @@
     "translation": "FEATURE FLAGS"
   },
   {
+    "id": "FEATURE FLAGS:",
+    "translation": "FEATURE FLAGS:"
+  },
+  {
     "id": "Failed assigning org role to user: ",
     "translation": "Failed assigning org role to user: "
   },
@@ -2138,6 +2170,10 @@
   {
     "id": "GETTING STARTED",
     "translation": "GETTING STARTED"
+  },
+  {
+    "id": "GETTING STARTED:",
+    "translation": "GETTING STARTED:"
   },
   {
     "id": "GLOBAL OPTIONS:",
@@ -2374,6 +2410,10 @@
   {
     "id": "INSTALLED PLUGIN COMMANDS",
     "translation": "INSTALLED PLUGIN COMMANDS"
+  },
+  {
+    "id": "INSTALLED PLUGIN COMMANDS:",
+    "translation": "INSTALLED PLUGIN COMMANDS:"
   },
   {
     "id": "INSTANCE_MEMORY",
@@ -3144,6 +3184,10 @@
     "translation": "ORG ADMIN"
   },
   {
+    "id": "ORG ADMIN:",
+    "translation": "ORG ADMIN:"
+  },
+  {
     "id": "ORG AUDITOR",
     "translation": "ORG AUDITOR"
   },
@@ -3154,6 +3198,10 @@
   {
     "id": "ORGS",
     "translation": "ORGS"
+  },
+  {
+    "id": "ORGS:",
+    "translation": "ORGS:"
   },
   {
     "id": "Option '--no-hostname' cannot be used with an app manifest containing the 'routes' attribute",
@@ -3426,6 +3474,10 @@
   {
     "id": "ROUTES",
     "translation": "ROUTES"
+  },
+  {
+    "id": "ROUTES:",
+    "translation": "ROUTES:"
   },
   {
     "id": "ROUTE_PATH",
@@ -3720,6 +3772,10 @@
     "translation": "SECURITY GROUP"
   },
   {
+    "id": "SECURITY GROUP:",
+    "translation": "SECURITY GROUP:"
+  },
+  {
     "id": "SERVICE",
     "translation": "SERVICE"
   },
@@ -3728,8 +3784,16 @@
     "translation": "SERVICE ADMIN"
   },
   {
+    "id": "SERVICE ADMIN:",
+    "translation": "SERVICE ADMIN:"
+  },
+  {
     "id": "SERVICES",
     "translation": "SERVICES"
+  },
+  {
+    "id": "SERVICES:",
+    "translation": "SERVICES:"
   },
   {
     "id": "SERVICE_INSTANCES",
@@ -3742,6 +3806,10 @@
   {
     "id": "SPACE ADMIN",
     "translation": "SPACE ADMIN"
+  },
+  {
+    "id": "SPACE ADMIN:",
+    "translation": "SPACE ADMIN:"
   },
   {
     "id": "SPACE AUDITOR",
@@ -3758,6 +3826,10 @@
   {
     "id": "SPACES",
     "translation": "SPACES"
+  },
+  {
+    "id": "SPACES:",
+    "translation": "SPACES:"
   },
   {
     "id": "SSH to an application container instance",
@@ -4258,6 +4330,10 @@
   {
     "id": "USER ADMIN",
     "translation": "USER ADMIN"
+  },
+  {
+    "id": "USER ADMIN:",
+    "translation": "USER ADMIN:"
   },
   {
     "id": "USERS",
