--- a/cf/i18n/resources/ja-jp.all.json
+++ b/cf/i18n/resources/ja-jp.all.json
@@ -164,12 +164,24 @@
     "translation": "プラグインの追加/削除"
   },
   {
+    "id": "ADD/REMOVE PLUGIN:",
+    "translation": "プラグインの追加/削除:"
+  },
+  {
     "id": "ADD/REMOVE PLUGIN REPOSITORY",
     "translation": "プラグイン・リポジトリーの追加/削除"
   },
   {
+    "id": "ADD/REMOVE PLUGIN REPOSITORY:",
+    "translation": "プラグイン・リポジトリーの追加/削除:"
+  },
+  {
     "id": "ADVANCED",
     "translation": "詳細"
+  },
+  {
+    "id": "ADVANCED:",
+    "translation": "詳細:"
   },
   {
     "id": "ALIAS:",
@@ -202,6 +214,10 @@
   {
     "id": "APPS",
     "translation": "アプリ"
+  },
+  {
+    "id": "APPS:",
+    "translation": "アプリ:"
   },
   {
     "id": "APP_INSTANCES",
@@ -386,6 +402,10 @@
   {
     "id": "BUILDPACKS",
     "translation": "ビルドパック"
+  },
+  {
+    "id": "BUILDPACKS:",
+    "translation": "ビルドパック:"
   },
   {
     "id": "BUILDPACK_NAME",
@@ -1376,6 +1396,10 @@
     "translation": "ドメイン"
   },
   {
+    "id": "DOMAINS:",
+    "translation": "ドメイン:"
+  },
+  {
     "id": "Dashboard: {{.URL}}",
     "translation": "ダッシュボード: {{.URL}}"
   },
@@ -1642,6 +1666,10 @@
   {
     "id": "ENVIRONMENT VARIABLE GROUPS",
     "translation": "環境変数グループ"
+  },
+  {
+    "id": "ENVIRONMENT VARIABLE GROUPS:",
+    "translation": "環境変数グループ:"
   },
   {
     "id": "ENVIRONMENT VARIABLES:",
@@ -2020,6 +2048,10 @@
     "translation": "フィーチャー・フラグ"
   },
   {
+    "id": "FEATURE FLAGS:",
+    "translation": "フィーチャー・フラグ:"
+  },
+  {
     "id": "Failed assigning org role to user: ",
     "translation": "組織の役割をユーザーに割り当てることができませんでした: "
   },
@@ -2138,6 +2170,10 @@
   {
     "id": "GETTING STARTED",
     "translation": "開始"
+  },
+  {
+    "id": "GETTING STARTED:",
+    "translation": "開始:"
   },
   {
     "id": "GLOBAL OPTIONS:",
@@ -2374,6 +2410,10 @@
   {
     "id": "INSTALLED PLUGIN COMMANDS",
     "translation": "インストール済みプラグイン・コマンド"
+  },
+  {
+    "id": "INSTALLED PLUGIN COMMANDS:",
+    "translation": "インストール済みプラグイン・コマンド:"
   },
   {
     "id": "INSTANCE_MEMORY",
@@ -3144,6 +3184,10 @@
     "translation": "組織管理者"
   },
   {
+    "id": "ORG ADMIN:",
+    "translation": "組織管理者:"
+  },
+  {
     "id": "ORG AUDITOR",
     "translation": "組織監査員"
   },
@@ -3154,6 +3198,10 @@
   {
     "id": "ORGS",
     "translation": "組織"
+  },
+  {
+    "id": "ORGS:",
+    "translation": "組織:"
   },
   {
     "id": "Option '--no-hostname' cannot be used with an app manifest containing the 'routes' attribute",
@@ -3426,6 +3474,10 @@
   {
     "id": "ROUTES",
     "translation": "経路"
+  },
+  {
+    "id": "ROUTES:",
+    "translation": "経路:"
   },
   {
     "id": "ROUTE_PATH",
@@ -3720,6 +3772,10 @@
     "translation": "セキュリティー・グループ"
   },
   {
+    "id": "SECURITY GROUP:",
+    "translation": "セキュリティー・グループ:"
+  },
+  {
     "id": "SERVICE",
     "translation": "サービス"
   },
@@ -3728,8 +3784,16 @@
     "translation": "サービス管理者"
   },
   {
+    "id": "SERVICE ADMIN:",
+    "translation": "サービス管理者:"
+  },
+  {
     "id": "SERVICES",
     "translation": "サービス"
+  },
+  {
+    "id": "SERVICES:",
+    "translation": "サービス:"
   },
   {
     "id": "SERVICE_INSTANCES",
@@ -3742,6 +3806,10 @@
   {
     "id": "SPACE ADMIN",
     "translation": "スペース管理者"
+  },
+  {
+    "id": "SPACE ADMIN:",
+    "translation": "スペース管理者:"
   },
   {
     "id": "SPACE AUDITOR",
@@ -3758,6 +3826,10 @@
   {
     "id": "SPACES",
     "translation": "スペース"
+  },
+  {
+    "id": "SPACES:",
+    "translation": "スペース:"
   },
   {
     "id": "SSH to an application container instance",
@@ -4258,6 +4330,10 @@
   {
     "id": "USER ADMIN",
     "translation": "ユーザー管理者"
+  },
+  {
+    "id": "USER ADMIN:",
+    "translation": "ユーザー管理者:"
   },
   {
     "id": "USERS",
