--- a/cf/i18n/resources/pt-br.all.json
+++ b/cf/i18n/resources/pt-br.all.json
@@ -164,12 +164,24 @@
     "translation": "INCLUIR/REMOVER PLUG-IN"
   },
   {
+    "id": "ADD/REMOVE PLUGIN:",
+    "translation": "INCLUIR/REMOVER PLUG-IN:"
+  },
+  {
     "id": "ADD/REMOVE PLUGIN REPOSITORY",
     "translation": "INCLUIR/REMOVER REPOSITÓRIO DE PLUG-IN"
   },
   {
+    "id": "ADD/REMOVE PLUGIN REPOSITORY:",
+    "translation": "INCLUIR/REMOVER REPOSITÓRIO DE PLUG-IN:"
+  },
+  {
     "id": "ADVANCED",
     "translation": "AVANÇADO"
+  },
+  {
+    "id": "ADVANCED:",
+    "translation": "AVANÇADO:"
   },
   {
     "id": "ALIAS:",
@@ -202,6 +214,10 @@
   {
     "id": "APPS",
     "translation": "APPS"
+  },
+  {
+    "id": "APPS:",
+    "translation": "APPS:"
   },
   {
     "id": "APP_INSTANCES",
@@ -388,12 +404,16 @@
     "translation": "BUILDPACKS"
   },
   {
+    "id": "BUILDPACKS:",
+    "translation": "BUILDPACKS:"
+  },
+  {
     "id": "BUILDPACK_NAME",
     "translation": "BUILDPACK_NAME"
   },
   {
     "id": "Bind a security group to a particular space, or all existing spaces of an org",
-    "translation": "Ligar um grupo de segurança a um espaço particular ou todos os espaços existentes de uma organização"
+    "translation": "Ligar um grupo de segurança a um espaço, ou todos os espaços existentes em uma organização"
   },
   {
     "id": "Bind a security group to the list of security groups to be used for running applications",
@@ -1376,6 +1396,10 @@
     "translation": "DOMAINS"
   },
   {
+    "id": "DOMAINS:",
+    "translation": "DOMAINS:"
+  },
+  {
     "id": "Dashboard: {{.URL}}",
     "translation": "Painel: {{.URL}}"
   },
@@ -1642,6 +1666,10 @@
   {
     "id": "ENVIRONMENT VARIABLE GROUPS",
     "translation": "GRUPOS DE VARIÁVEIS DE AMBIENTE"
+  },
+  {
+    "id": "ENVIRONMENT VARIABLE GROUPS:",
+    "translation": "GRUPOS DE VARIÁVEIS DE AMBIENTE:"
   },
   {
     "id": "ENVIRONMENT VARIABLES:",
@@ -2020,6 +2048,10 @@
     "translation": "SINALIZAÇÕES DE RECURSOS"
   },
   {
+    "id": "FEATURE FLAGS:",
+    "translation": "SINALIZAÇÕES DE RECURSOS:"
+  },
+  {
     "id": "Failed assigning org role to user: ",
     "translation": "Falha ao designar função de organização ao usuário: "
   },
@@ -2138,6 +2170,10 @@
   {
     "id": "GETTING STARTED",
     "translation": "INTRODUÇÃO"
+  },
+  {
+    "id": "GETTING STARTED:",
+    "translation": "INTRODUÇÃO:"
   },
   {
     "id": "GLOBAL OPTIONS:",
@@ -2374,6 +2410,10 @@
   {
     "id": "INSTALLED PLUGIN COMMANDS",
     "translation": "COMANDOS DE PLUG-IN INSTALADOS"
+  },
+  {
+    "id": "INSTALLED PLUGIN COMMANDS:",
+    "translation": "COMANDOS DE PLUG-IN INSTALADOS:"
   },
   {
     "id": "INSTANCE_MEMORY",
@@ -3144,6 +3184,10 @@
     "translation": "ADMINISTRADOR DA ORGANIZAÇÃO"
   },
   {
+    "id": "ORG ADMIN:",
+    "translation": "ADMINISTRADOR DA ORGANIZAÇÃO:"
+  },
+  {
     "id": "ORG AUDITOR",
     "translation": "AUDITOR DA ORGANIZAÇÃO"
   },
@@ -3154,6 +3198,10 @@
   {
     "id": "ORGS",
     "translation": "ORGANIZAÇÕES"
+  },
+  {
+    "id": "ORGS:",
+    "translation": "ORGANIZAÇÕES:"
   },
   {
     "id": "Option '--no-hostname' cannot be used with an app manifest containing the 'routes' attribute",
@@ -3426,6 +3474,10 @@
   {
     "id": "ROUTES",
     "translation": "ROTAS"
+  },
+  {
+    "id": "ROUTES:",
+    "translation": "ROTAS:"
   },
   {
     "id": "ROUTE_PATH",
@@ -3720,6 +3772,10 @@
     "translation": "GRUPO DE SEGURANÇA"
   },
   {
+    "id": "SECURITY GROUP:",
+    "translation": "GRUPO DE SEGURANÇA:"
+  },
+  {
     "id": "SERVICE",
     "translation": "SERVIÇO"
   },
@@ -3728,8 +3784,16 @@
     "translation": "ADMINISTRADOR DE SERVIÇO"
   },
   {
+    "id": "SERVICE ADMIN:",
+    "translation": "ADMINISTRADOR DE SERVIÇO:"
+  },
+  {
     "id": "SERVICES",
     "translation": "SERVICES"
+  },
+  {
+    "id": "SERVICES:",
+    "translation": "SERVICES:"
   },
   {
     "id": "SERVICE_INSTANCES",
@@ -3742,6 +3806,10 @@
   {
     "id": "SPACE ADMIN",
     "translation": "ADMINISTRADOR DO ESPAÇO"
+  },
+  {
+    "id": "SPACE ADMIN:",
+    "translation": "ADMINISTRADOR DO ESPAÇO:"
   },
   {
     "id": "SPACE AUDITOR",
@@ -3758,6 +3826,10 @@
   {
     "id": "SPACES",
     "translation": "ESPAÇOS"
+  },
+  {
+    "id": "SPACES:",
+    "translation": "ESPAÇOS:"
   },
   {
     "id": "SSH to an application container instance",
@@ -4258,6 +4330,10 @@
   {
     "id": "USER ADMIN",
     "translation": "USUÁRIO ADMINISTRADOR"
+  },
+  {
+    "id": "USER ADMIN:",
+    "translation": "USUÁRIO ADMINISTRADOR:"
   },
   {
     "id": "USERS",
