--- a/cf/i18n/resources/zh-hans.all.json
+++ b/cf/i18n/resources/zh-hans.all.json
@@ -164,12 +164,24 @@
     "translation": "添加/除去插件"
   },
   {
+    "id": "ADD/REMOVE PLUGIN:",
+    "translation": "添加/除去插件:"
+  },
+  {
     "id": "ADD/REMOVE PLUGIN REPOSITORY",
     "translation": "添加/除去插件存储库"
   },
   {
+    "id": "ADD/REMOVE PLUGIN REPOSITORY:",
+    "translation": "添加/除去插件存储库:"
+  },
+  {
     "id": "ADVANCED",
     "translation": "高级"
+  },
+  {
+    "id": "ADVANCED:",
+    "translation": "高级:"
   },
   {
     "id": "ALIAS:",
@@ -202,6 +214,10 @@
   {
     "id": "APPS",
     "translation": "应用程序"
+  },
+  {
+    "id": "APPS:",
+    "translation": "应用程序:"
   },
   {
     "id": "APP_INSTANCES",
@@ -386,6 +402,10 @@
   {
     "id": "BUILDPACKS",
     "translation": "BUILDPACK"
+  },
+  {
+    "id": "BUILDPACKS:",
+    "translation": "BUILDPACK:"
   },
   {
     "id": "BUILDPACK_NAME",
@@ -1376,6 +1396,10 @@
     "translation": "域"
   },
   {
+    "id": "DOMAINS:",
+    "translation": "域:"
+  },
+  {
     "id": "Dashboard: {{.URL}}",
     "translation": "仪表板: {{.URL}}"
   },
@@ -1642,6 +1666,10 @@
   {
     "id": "ENVIRONMENT VARIABLE GROUPS",
     "translation": "环境变量组"
+  },
+  {
+    "id": "ENVIRONMENT VARIABLE GROUPS:",
+    "translation": "环境变量组:"
   },
   {
     "id": "ENVIRONMENT VARIABLES:",
@@ -2020,6 +2048,10 @@
     "translation": "功能标志"
   },
   {
+    "id": "FEATURE FLAGS:",
+    "translation": "功能标志:"
+  },
+  {
     "id": "Failed assigning org role to user: ",
     "translation": "为用户分配组织角色失败: "
   },
@@ -2138,6 +2170,10 @@
   {
     "id": "GETTING STARTED",
     "translation": "入门"
+  },
+  {
+    "id": "GETTING STARTED:",
+    "translation": "入门:"
   },
   {
     "id": "GLOBAL OPTIONS:",
@@ -2374,6 +2410,10 @@
   {
     "id": "INSTALLED PLUGIN COMMANDS",
     "translation": "已安装插件命令"
+  },
+  {
+    "id": "INSTALLED PLUGIN COMMANDS:",
+    "translation": "已安装插件命令:"
   },
   {
     "id": "INSTANCE_MEMORY",
@@ -3144,6 +3184,10 @@
     "translation": "组织管理员"
   },
   {
+    "id": "ORG ADMIN:",
+    "translation": "组织管理员:"
+  },
+  {
     "id": "ORG AUDITOR",
     "translation": "组织审计员"
   },
@@ -3154,6 +3198,10 @@
   {
     "id": "ORGS",
     "translation": "组织"
+  },
+  {
+    "id": "ORGS:",
+    "translation": "组织:"
   },
   {
     "id": "Option '--no-hostname' cannot be used with an app manifest containing the 'routes' attribute",
@@ -3426,6 +3474,10 @@
   {
     "id": "ROUTES",
     "translation": "路径"
+  },
+  {
+    "id": "ROUTES:",
+    "translation": "路径:"
   },
   {
     "id": "ROUTE_PATH",
@@ -3720,6 +3772,10 @@
     "translation": "安全组"
   },
   {
+    "id": "SECURITY GROUP:",
+    "translation": "安全组:"
+  },
+  {
     "id": "SERVICE",
     "translation": "服务"
   },
@@ -3728,8 +3784,16 @@
     "translation": "服务管理员"
   },
   {
+    "id": "SERVICE ADMIN:",
+    "translation": "服务管理员:"
+  },
+  {
     "id": "SERVICES",
     "translation": "服务"
+  },
+  {
+    "id": "SERVICES:",
+    "translation": "服务:"
   },
   {
     "id": "SERVICE_INSTANCES",
@@ -3742,6 +3806,10 @@
   {
     "id": "SPACE ADMIN",
     "translation": "空间管理员"
+  },
+  {
+    "id": "SPACE ADMIN:",
+    "translation": "空间管理员:"
   },
   {
     "id": "SPACE AUDITOR",
@@ -3758,6 +3826,10 @@
   {
     "id": "SPACES",
     "translation": "空间"
+  },
+  {
+    "id": "SPACES:",
+    "translation": "空间:"
   },
   {
     "id": "SSH to an application container instance",
@@ -4258,6 +4330,10 @@
   {
     "id": "USER ADMIN",
     "translation": "用户管理员"
+  },
+  {
+    "id": "USER ADMIN:",
+    "translation": "用户管理员:"
   },
   {
     "id": "USERS",
