translate "SEE ALSO:"
[#122418731]

Signed-off-by: Luan Santos <lsantos@pivotal.io>

--- a/cf/i18n/resources/en-us.all.json
+++ b/cf/i18n/resources/en-us.all.json
@@ -3776,6 +3776,10 @@
     "translation": "SECURITY GROUP:"
   },
   {
+    "id": "SEE ALSO:",
+    "translation": "SEE ALSO:"
+  },
+  {
     "id": "SERVICE",
     "translation": "SERVICE"
   },
