--- a/cf/i18n/resources/it-it.all.json
+++ b/cf/i18n/resources/it-it.all.json
@@ -3776,6 +3776,10 @@
     "translation": "GRUPPO DI SICUREZZA:"
   },
   {
+    "id": "SEE ALSO:",
+    "translation": "VEDI ANCHE:"
+  },
+  {
     "id": "SERVICE",
     "translation": "SERVIZIO"
   },
