--- a/cf/i18n/resources/ja-jp.all.json
+++ b/cf/i18n/resources/ja-jp.all.json
@@ -3776,6 +3776,10 @@
     "translation": "セキュリティー・グループ:"
   },
   {
+    "id": "SEE ALSO:",
+    "translation": "関連項目:"
+  },
+  {
     "id": "SERVICE",
     "translation": "サービス"
   },
