--- a/cf/i18n/resources/pt-br.all.json
+++ b/cf/i18n/resources/pt-br.all.json
@@ -3776,6 +3776,10 @@
     "translation": "GRUPO DE SEGURANÇA:"
   },
   {
+    "id": "SEE ALSO:",
+    "translation": "VEJA TAMBÉM:"
+  },
+  {
     "id": "SERVICE",
     "translation": "SERVIÇO"
   },
