--- a/cf/i18n/resources/zh-hans.all.json
+++ b/cf/i18n/resources/zh-hans.all.json
@@ -3776,6 +3776,10 @@
     "translation": "安全组:"
   },
   {
+    "id": "SEE ALSO:",
+    "translation": "参见:"
+  },
+  {
     "id": "SERVICE",
     "translation": "服务"
   },
