--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -3776,6 +3776,10 @@
     "translation": "SICHERHEITSGRUPPE:"
   },
   {
+    "id": "SEE ALSO:",
+    "translation": "SIEHE AUCH:"
+  },
+  {
     "id": "SERVICE",
     "translation": "SERVICE"
   },
