--- a/cf/i18n/resources/es-es.all.json
+++ b/cf/i18n/resources/es-es.all.json
@@ -3776,6 +3776,10 @@
     "translation": "GRUPO DE SEGURIDAD:"
   },
   {
+    "id": "SEE ALSO:",
+    "translation": "VÉASE TAMBIÉN:"
+  },
+  {
     "id": "SERVICE",
     "translation": "SERVICIO"
   },
