--- a/cf/i18n/resources/fr-fr.all.json
+++ b/cf/i18n/resources/fr-fr.all.json
@@ -3776,6 +3776,10 @@
     "translation": "GROUPE DE SECURITE :"
   },
   {
+    "id": "SEE ALSO:",
+    "translation": "VOIR AUSSI :"
+  },
+  {
     "id": "SERVICE",
     "translation": "SERVICE"
   },
