--- a/cf/i18n/resources/ko-kr.all.json
+++ b/cf/i18n/resources/ko-kr.all.json
@@ -3776,6 +3776,10 @@
     "translation": "보안 그룹:"
   },
   {
+    "id": "SEE ALSO:",
+    "translation": "관련 항목:"
+  },
+  {
     "id": "SERVICE",
     "translation": "서비스"
   },
