--- a/cf/i18n/resources/zh-hant.all.json
+++ b/cf/i18n/resources/zh-hant.all.json
@@ -3776,6 +3776,10 @@
     "translation": "安全群組:"
   },
   {
+    "id": "SEE ALSO:",
+    "translation": "另見:"
+  },
+  {
     "id": "SERVICE",
     "translation": "服務"
   },
