--- a/cf/i18n/resources/it-it.all.json
+++ b/cf/i18n/resources/it-it.all.json
@@ -2028,8 +2028,8 @@
     "translation": "Errore durante il recupero dei pacchetti di build.\n{{.Error}}"
   },
   {
-    "id": "Failed fetching domains for organization %s.\n{{.Err}}",
-    "translation": "Errore durante il recupero dei domini per l'organizzazione %s.\n{{.Err}}"
+    "id": "Failed fetching domains for organization {{.OrgName}}.\n{{.Err}}",
+    "translation": "Errore durante il recupero dei domini per l'organizzazione {{.OrgName}}.\n{{.Err}}"
   },
   {
     "id": "Failed fetching domains.\n{{.Error}}",
