--- a/cf/i18n/resources/zh-hans.all.json
+++ b/cf/i18n/resources/zh-hans.all.json
@@ -2028,8 +2028,8 @@
     "translation": "访存 buildpack 失败。\n{{.Error}}"
   },
   {
-    "id": "Failed fetching domains for organization %s.\n{{.Err}}",
-    "translation": "访存组织 %s 的域失败。\n{{.Err}}"
+    "id": "Failed fetching domains for organization {{.OrgName}}.\n{{.Err}}",
+    "translation": "访存组织 {{.OrgName}} 的域失败。\n{{.Err}}"
   },
   {
     "id": "Failed fetching domains.\n{{.Error}}",
