--- a/cf/i18n/resources/zh-hant.all.json
+++ b/cf/i18n/resources/zh-hant.all.json
@@ -2028,8 +2028,8 @@
     "translation": "提取建置套件時失敗。\n{{.Error}}"
   },
   {
-    "id": "Failed fetching domains for organization %s.\n{{.Err}}",
-    "translation": "提取組織 %s 的網域時失敗。\n{{.Err}}"
+    "id": "Failed fetching domains for organization {{.OrgName}}.\n{{.Err}}",
+    "translation": "提取組織 {{.OrgName}} 的網域時失敗。\n{{.Err}}"
   },
   {
     "id": "Failed fetching domains.\n{{.Error}}",
